# fastapi-board

./: README.md  asgi.py  pyproject.toml
alembic/: env.py
alembic/versions/: 4430434157dc_.py  5ae9d3882a0a_add_delete_column_to_users_table.py  dda0d0a75c19_.py  ee74353c9ebe_first_db.py  f7541d426d4d_.py
board/: __init__.py
board/repositories/: __init__.py  models.py
board/rest/: __init__.py
board/rest/models/: __init__.py  board.py
board/rest/routers/: __init__.py  board.py  user.py
board/utils/: common.py
