[tool.poetry]
name = "fastapiboard-fork"
version = "0.1.0"
description = ""
authors = ["greenpea88 <green_pea88@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
